@@ -1,9 +1,14 @@
 2001-07-18  Michael Thome  <mthome@bbn.com>
 
-	* ContainerSupport
+	* ComponentDescription
+	Changed interepretation of insertion point slightly, added name
+	information. 
+
+	* ContainerSupport, etc
 	Changed method specifyChildContext() to
 	specifyChildServiceBroker() and data member childContext to
 	childServiceBroker for consistency.
+	
 
 2001-07-16  Michael Thome  <mthome@bbn.com>
 
